add: GetId route
